PartialSatEngine update adding: local Po Lmabda reference, initial porosity change, entrance pressure crack criteria added, opening pressure crack criteria, water volume tracking, gas permeability tracking, improve boundary condition application, track crack fabric

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -352,7 +352,7 @@ make_minimal:
   <<: *artifacts_definition
   <<: *skip_WIP_and_Draft
   before_script:
-    - export EXTRA_CMAKE_ARGS="-DENABLE_VTK=OFF -DENABLE_MPI=OFF -DENABLE_GUI=OFF -DENABLE_GTS=OFF -DENABLE_TWOPHASEFLOW=OFF -DENABLE_CGAL=OFF -DENABLE_FEMLIKE=OFF -DENABLE_LBMFLOW=OFF -DENABLE_POTENTIAL_BLOCKS=OFF -DENABLE_POTENTIAL_PARTICLES=OFF -DENABLE_GL2PS=OFF -DENABLE_LOGGER=OFF -DENABLE_OPENMP=OFF $EXTRA_CMAKE_ARGS"
+    - export EXTRA_CMAKE_ARGS="-DENABLE_VTK=OFF -DENABLE_MPI=OFF -DENABLE_GUI=OFF -DENABLE_GTS=OFF -DENABLE_TWOPHASEFLOW=OFF -DENABLE_PARTIALSAT=OFF -DENABLE_CGAL=OFF -DENABLE_FEMLIKE=OFF -DENABLE_LBMFLOW=OFF -DENABLE_POTENTIAL_BLOCKS=OFF -DENABLE_POTENTIAL_PARTICLES=OFF -DENABLE_GL2PS=OFF -DENABLE_LOGGER=OFF -DENABLE_OPENMP=OFF $EXTRA_CMAKE_ARGS"
     - echo $EXTRA_CMAKE_ARGS
   image: registry.gitlab.com/yade-dev/docker-yade:debian-bullseye
 
@@ -524,7 +524,7 @@ tst_bll_ppc64el:
   needs: ["mk_bll_ppc64el"]
   tags:
     - qemu
-  timeout: 45 minutes 
+  timeout: 45 minutes
 
 tst_bll_arm64:
   <<: *test_definition
@@ -979,4 +979,3 @@ deb_focal:
   before_script:
     - rm -rf ./deb
     - ./scripts/ppa_ci/builddeb.py -d "focal"
-
