--- a/scripts/ppa_ci/debian/control
+++ b/scripts/ppa_ci/debian/control
@@ -29,6 +29,7 @@ Build-Depends:
  pyqt5-dev-tools,
  python3-all-dev (>= 2.6.6-3~),
  python3-matplotlib,
+ python3-mpmath,
  python3-numpy,
  python3-pil,
  python3-pyqt5,
@@ -112,6 +113,7 @@ Depends:
  python3-xlib,
  python3-ipython | ipython3,
  python3-future,
+ python3-mpmath,
  ${misc:Depends},
  ${python:Depends},
  ${shlibs:Depends}
