--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -481,30 +481,37 @@ ENDIF()
 
 # Detect if RealHP<N> is supported. Allow option to override this for testing.
 FIND_PACKAGE(Mpmath)
-IF((CMAKE_CXX_COMPILER_VERSION VERSION_GREATER_EQUAL 9.2.1) OR ((CMAKE_CXX_COMPILER_VERSION VERSION_GREATER_EQUAL 8.3.0) AND (ENABLE_MPFR) AND (REAL_PRECISION_BITS GREATER 128)) OR (ALLOW_CRASHES))
- IF(Boost_MAJOR_VERSION EQUAL 1 AND Boost_MINOR_VERSION LESS 67)
-    SET(REAL_MULTI_HP "OFF")
-    MESSAGE(STATUS "${Esc}[31mDisabling RealHP<N> because boost version < 1.67 is too old.${Esc}[0m")
- ELSE()
-  IF(MPMATH_FOUND)
-    SET(REAL_MULTI_HP "ON")
-    IF(NOT ENABLE_MPFR)
-      IF(Boost_MAJOR_VERSION EQUAL 1 AND Boost_MINOR_VERSION LESS 71 AND REAL_PRECISION_BITS EQUAL 80)
-        MESSAGE(STATUS "${Esc}[31mCannot enable RealHP<N> with 'long double' type because cpp_bin_float in boost version < 1.71 has interoperability problems, please use cmake option ENABLE_MPFR=ON to fix this or upgrade boost library.${Esc}[0m")
-        SET(REAL_MULTI_HP "OFF")
-      ELSE()
-        MESSAGE(STATUS "${Esc}[31mWarning: RealHP<N> higher precision types will use slow boost cpp_bin_float, consider passing cmake option ENABLE_MPFR=ON to fix this.${Esc}[0m")
+IF (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+  IF((CMAKE_CXX_COMPILER_VERSION VERSION_GREATER_EQUAL 9.2.1) OR ((CMAKE_CXX_COMPILER_VERSION VERSION_GREATER_EQUAL 8.3.0) AND (ENABLE_MPFR) AND (REAL_PRECISION_BITS GREATER 128)) OR (ALLOW_CRASHES))
+    IF(Boost_MAJOR_VERSION EQUAL 1 AND Boost_MINOR_VERSION LESS 67)
+      SET(REAL_MULTI_HP "OFF")
+      MESSAGE(STATUS "${Esc}[31mDisabling RealHP<N> because boost version < 1.67 is too old.${Esc}[0m")
+    ELSE()
+
+    IF(MPMATH_FOUND)
+      SET(REAL_MULTI_HP "ON")
+      IF(NOT ENABLE_MPFR)
+        IF(Boost_MAJOR_VERSION EQUAL 1 AND Boost_MINOR_VERSION LESS 71 AND REAL_PRECISION_BITS EQUAL 80)
+          MESSAGE(STATUS "${Esc}[31mCannot enable RealHP<N> with 'long double' type because cpp_bin_float in boost version < 1.71 has interoperability problems, please use cmake option ENABLE_MPFR=ON to fix this or upgrade boost library.${Esc}[0m")
+          SET(REAL_MULTI_HP "OFF")
+        ELSE()
+          MESSAGE(STATUS "${Esc}[31mWarning: RealHP<N> higher precision types will use slow boost cpp_bin_float, consider passing cmake option ENABLE_MPFR=ON to fix this.${Esc}[0m")
+        ENDIF()
       ENDIF()
+    ELSE()
+      SET(REAL_MULTI_HP "OFF")
+      MESSAGE(STATUS "${Esc}[31mDisabling RealHP<N>, it can work on this system, but python3-mpmath package is missing.${Esc}[0m")
     ENDIF()
+  ENDIF()
   ELSE()
     SET(REAL_MULTI_HP "OFF")
-    MESSAGE(STATUS "${Esc}[31mDisabling RealHP<N>, it can work on this system, but python3-mpmath package is missing.${Esc}[0m")
+    MESSAGE(STATUS "${Esc}[31mDisabling RealHP<N>, this compiler is too old to make this work.${Esc}[0m")
   ENDIF()
- ENDIF()
 ELSE()
   SET(REAL_MULTI_HP "OFF")
-  MESSAGE(STATUS "${Esc}[31mDisabling RealHP<N>, this compiler is too old to make this work.${Esc}[0m")
+  MESSAGE(STATUS "${Esc}[31mDisabling RealHP<N>, Clang cannot compile this feature at the moment.${Esc}[0m")
 ENDIF()
+
 IF(REAL_MULTI_HP)
   SET(REAL_USE_MPMATH "ON")
   SET(CONFIGURED_FEATS "${CONFIGURED_FEATS} RealHP")
